<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/calculadora"
            android:layout_width="249dp"
            android:layout_height="37dp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="68dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:textSize="24sp"
            android:textAlignment="center"
            android:typeface="sans"
            android:textColor="#142DB9" />

    <TextView
            android:text="@string/resultadoFinal"
            android:layout_width="249dp"
            android:layout_height="37dp"
            android:id="@+id/resultado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="380dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:typeface="sans"
            android:textColor="#000000" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/numero2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numero1"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:hint="@string/editTextNumero_1" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/numero1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:minHeight="48dp"
            android:hint="@string/editTextNumero_2" />

    <Button
            android:text="@string/valor_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonMultiplicacion"
            app:layout_constraintTop_toBottomOf="@+id/numero2"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonResta"
            app:icon="@drawable/ic_baseline_minimize_24"
            app:layout_constraintTop_toBottomOf="@+id/numero2"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="@+id/botonDivision"
            android:layout_marginEnd="196dp"
            tools:ignore="SpeakableTextPresentCheck" />

    <Button
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:id="@+id/botonSuma"
            app:icon="@drawable/ic_baseline_add_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintTop_toBottomOf="@+id/numero2"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="@+id/botonDivision"
            tools:ignore="SpeakableTextPresentCheck" />

    <Button
            android:text="@string/valor_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonDivision"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numero2"
            android:layout_marginTop="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>